--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,10 @@ DerivedData/
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+*.xcworkspace
 
 # Carthage
 #
@@ -69,3 +69,7 @@ iOSInjectionProject/
 
 #GODOT
 godot/
+
+#private keys
+*.p8
+godot-jwt/Configs.swift
